Realización del footer, fondo gris y letra blanca

--- a/blogpost.htm
+++ b/blogpost.htm
@@ -19,5 +19,10 @@
             <p>Suscribete y dale like</p>
         </div>
     </div>
+    <footer>
+        <p>
+            Este es el footer 
+        </p>
+    </footer>
 </body>
 </html>
